[package]
name = "guff-matrix"
version = "0.1.7"
edition = "2018"
description = "Fast Galois Field matrix multiplication"
homepage = "https://github.com/declanmalone/guff-matrix"
categories = ["mathematics"]
keywords = ["IDA", "Galois", "matrix", "maths", "SIMD"]
license = "GPL-2.0-or-later OR LGPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Use criterion for benchmarking all sorts of things
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "vector_mul"
harness = false

[profile.release]
debug = true

[dependencies]
#"num" = "0.4.0"
#"num-traits" = "0.2.14"
guff = "0.1.7"

[features]
# enable software simulation of matrix multiply algorithm
# makes crate::simulator available.
simulator = []

# enable 'arm_dsp' on armv6/armv7 boards with 'dsp' extension
# for 4-way simd long multiplication
arm_dsp = []

# enable 'arm_long' on armv7+neon/armv8 boards 
# for 16-way simd long multiplication
arm_long = []

# enable 'arm_vmull' on armv7+neon/armv8 boards
# for 8-way simd long multiplication (fastest!)
arm_vmull = []

# I want documentation generated for features
[package.metadata.docs.rs]
#features = ["simulator", "arm_dsp", "arm_long", "arm_vmull"]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "armv7-unknown-linux-gnueabihf", "aarch64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]


